--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@ant-design/icons": "^5.6.0",
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.3",
+    "antd-style": "^3.7.1",
     "axios": "^1.7.9",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.4"
+    "react-router": "^7.1.4",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/qs": "^6.9.18",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
