--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/react-redux": "^7.1.34",
     "antd": "^5.23.3",
     "antd-style": "^3.7.1",
     "axios": "^1.7.9",
     "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.4",
     "react-router-dom": "^7.1.5"
   },
